rustdocs/errors/rust-bitcoin-bitcoin-examples-ecdsa-psbt.rs.txt
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `bitcoin`
  --> ../rust-bitcoin/bitcoin/examples/ecdsa-psbt.rs:36:5
   |
36 | use bitcoin::ext::*;
   |     ^^^^^^^ use of unresolved module or unlinked crate `bitcoin`
   |
help: you might be missing a crate named `bitcoin`, add it to your project and import it in your code
   |
31 + extern crate bitcoin;
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `bitcoin`
  --> ../rust-bitcoin/bitcoin/examples/ecdsa-psbt.rs:34:5
   |
34 | use bitcoin::bip32::{ChildNumber, DerivationPath, Fingerprint, IntoDeriv...
   |     ^^^^^^^ use of unresolved module or unlinked crate `bitcoin`
   |
help: you might be missing a crate named `bitcoin`, add it to your project and import it in your code
   |
31 + extern crate bitcoin;
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `bitcoin`
  --> ../rust-bitcoin/bitcoin/examples/ecdsa-psbt.rs:35:5
   |
35 | use bitcoin::consensus::encode;
   |     ^^^^^^^ use of unresolved module or unlinked crate `bitcoin`
   |
help: you might be missing a crate named `bitcoin`, add it to your project and import it in your code
   |
31 + extern crate bitcoin;
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `bitcoin`
  --> ../rust-bitcoin/bitcoin/examples/ecdsa-psbt.rs:37:5
   |
37 | use bitcoin::locktime::absolute;
   |     ^^^^^^^ use of unresolved module or unlinked crate `bitcoin`
   |
help: you might be missing a crate named `bitcoin`, add it to your project and import it in your code
   |
31 + extern crate bitcoin;
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `bitcoin`
  --> ../rust-bitcoin/bitcoin/examples/ecdsa-psbt.rs:38:5
   |
38 | use bitcoin::psbt::{self, Input, Psbt, PsbtSighashType};
   |     ^^^^^^^ use of unresolved module or unlinked crate `bitcoin`
   |
help: you might be missing a crate named `bitcoin`, add it to your project and import it in your code
   |
31 + extern crate bitcoin;
   |

error[E0432]: unresolved import `bitcoin`
  --> ../rust-bitcoin/bitcoin/examples/ecdsa-psbt.rs:38:5
   |
38 | use bitcoin::psbt::{self, Input, Psbt, PsbtSighashType};
   |     ^^^^^^^ use of unresolved module or unlinked crate `bitcoin`
   |
help: you might be missing a crate named `bitcoin`, add it to your project and import it in your code
   |
31 + extern crate bitcoin;
   |

error[E0432]: unresolved import `bitcoin`
  --> ../rust-bitcoin/bitcoin/examples/ecdsa-psbt.rs:39:5
   |
39 | use bitcoin::{
   |     ^^^^^^^ use of unresolved module or unlinked crate `bitcoin`
   |
help: you might be missing a crate named `bitcoin`, add it to your project and import it in your code
   |
31 + extern crate bitcoin;
   |

error: aborting due to 7 previous errors

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
